# cyberfeeder

./: .gitignore  Makefile.am  NOTES  README  TODO  configure.ac
data/: 00_Core.json
data/cards/: 00_Core.json  01_Core.json  01_What_Lies_Ahead.json  02_Trace_Amount.json  02_What_Lies_Ahead.json  04_A_Study_in_Static.json  04_Cyber_Exodus.json  05_A_Study_in_Static.json  06_Humanitys_Shadow.json  07_Future_Proof.json
src/: card.c  card.h  card_db.c  card_db.h  card_set.c  card_set.h  cyberfeeder.c  dir.c  dir.h  faction_lookup.gperf  faction_lookup.h  hash.h  hash_card_type.gperf  hash_faction_name.gperf  json.c  json.h  load_error.c  load_error.h  pages.h  text_view_helpers.c  text_view_helpers.h  ui_helpers.c  ui_helpers.h  widget_helpers.c  widget_helpers.h
src/pages/: the_toolbox.c  tmi.c
